--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,28 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         addBaseImageData: false
+- stage: Provision
+  displayName: 'terraforming on Azure'
+  dependsOn: Build
+  jobs:
+    - job: Provision
+      displayName: 'Provisioning Container Insatance'
+      pool:
+        vmImage: 'ubuntu-latest'
+      variables:
+        - group: TerrformEnVariables
+      steps:
+        - script: |
+            set -e
+
+            terraform init -input=false
+            terraform apply -input=false -auto-approve
+          name: 'RunTerraform'
+          displayName: 'Run Terraform'
+          env:
+            ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+            ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+            ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+            ARM_TENANT_ID: $(ARM_TENANT_ID)
+
+
