--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ stages:
         repository: 'psbhatti/weatherapi'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
+        tags: |
+          $(tag)
         addBaseImageData: false
 - stage: Provision
   displayName: 'terraforming on Azure'
@@ -50,5 +52,6 @@ stages:
             ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
             ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
             ARM_TENANT_ID: $(ARM_TENANT_ID)
+            TF_VAR_imagebuild: $(tag)
 
 
